Improve Economic Insight card style - Fix Mulitple context Modal backdrop effect
