# src/routes/routes.ts
@@ -1603,6 +1603,35 @@ export function RegisterRoutes(app: Router,opts?:{multer?:ReturnType<typeof mult
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsContinentController_initializeDB: Record<string, TsoaRoute.ParameterSchema> = {
+        };
+        app.get('/api/v1/continents/initialize_db',
+            ...(fetchMiddlewares<RequestHandler>(ContinentController)),
+            ...(fetchMiddlewares<RequestHandler>(ContinentController.prototype.initializeDB)),
+
+            async function ContinentController_initializeDB(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsContinentController_initializeDB, request, response });
+
+                const controller = new ContinentController();
+
+              await templateService.apiHandler({
+                methodName: 'initializeDB',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         const argsContinentController_createContinent: Record<string, TsoaRoute.ParameterSchema> = {
                 body: {"in":"body","name":"body","required":true,"ref":"CreateContinentRequest"},
         };
@@ -1717,35 +1746,6 @@ export function RegisterRoutes(app: Router,opts?:{multer?:ReturnType<typeof mult
 
               await templateService.apiHandler({
                 methodName: 'getContinentById',
-                controller,
-                response,
-                next,
-                validatedArgs,
-                successStatus: undefined,
-              });
-            } catch (err) {
-                return next(err);
-            }
-        });
-        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        const argsContinentController_initializeDB: Record<string, TsoaRoute.ParameterSchema> = {
-        };
-        app.get('/api/v1/continents/initialize_db',
-            ...(fetchMiddlewares<RequestHandler>(ContinentController)),
-            ...(fetchMiddlewares<RequestHandler>(ContinentController.prototype.initializeDB)),
-
-            async function ContinentController_initializeDB(request: ExRequest, response: ExResponse, next: any) {
-
-            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = templateService.getValidatedArgs({ args: argsContinentController_initializeDB, request, response });
-
-                const controller = new ContinentController();
-
-              await templateService.apiHandler({
-                methodName: 'initializeDB',
                 controller,
                 response,
                 next,
